@@ -3,6 +3,7 @@
   * add verify_token and delete_token
   * support get_book(:isbn => isbn)
   * support get_movie(:imdb => imdb)
+  * add get_miniblog_comments
 * Douban::Book
   * add method: isbn, isbn10, isbn13
 * Douban::Movie
